--- a/02/001/index.html
+++ b/02/001/index.html
@@ -16,6 +16,7 @@
         </button>
     </div>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/project.js"></script>
 </body>
 </html>
