--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -5,15 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Document</title>
+	<title>Java Script</title>
 </head>
 <body>
-	<!-- <script defer src="js/script.js"></script> 
-    <script defer src="js/test.js"></script> -->
-	<script async src="js/script.js"></script> 
-    <!-- <script async src="js/test.js"></script> -->
-	<p>Hello, world!</p>
-	<p>Second message</p>
 	
+	<button></button>
+	<script src="js/script.js"></script> 
 </body>
 </html>
