--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Java Script</title>
+	<title>JS Local server</title>
 </head>
 <body>
 	
-	<button>Test2</button>
+	<button>Test</button>
 	<script src="js/script.js"></script> 
 </body>
 </html>
