--- a/projects/usdbtc/index.html
+++ b/projects/usdbtc/index.html
@@ -8,6 +8,10 @@
 	<title>JS Local server</title>
 </head>
 <body>
+	<label for="usd">USD</label>
+	<input type="text" id="usd">
+	<label for="btc">BTC</label>
+	<input type="text" id="btc">
 	<button>Test</button>
 	<script src="js/script.js"></script> 
 </body>
