--- a/projects/3/index.html
+++ b/projects/3/index.html
@@ -255,8 +255,8 @@
                 <form action="#">
                     <div data-close class="modal__close">&times;</div>
                     <div class="modal__title">We will contact you as soon as possible!</div>
-                    <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
-                    <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
+                    <input required placeholder="Your name" name="name" type="text" class="modal__input">
+                    <input required placeholder="Your phone number" name="phone" type="phone" class="modal__input">
                     <button class="btn btn_dark btn_min">Call me back</button>
                 </form>
             </div>
